--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "project85-swipableflatlist_template",
-    "slug": "snack-a33828a5-316f-4586-be9b-db94f0d18440",
+    "name": "project85-template",
+    "slug": "snack-a966404b-94ff-45ca-b21e-e931c32b9e68",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
